--- a/sections/chapter_one_intro.tex
+++ b/sections/chapter_one_intro.tex
@@ -14,19 +14,19 @@ Software debloating refers to the identification of unused web application featu
 On one hand, popular web applications have become monolithic platforms that serve a variety of features for a wide range of users, many of which remain unused by their users in each deployment of the applications. 
 On the other hand, third-party libraries commonly used to build web applications also suffer from the same generalizability, which essentially introduces unused code into the applications. 
 Nevertheless, attackers can still abuse the vulnerabilities in the unused code to gain control of the websites or exfiltrate user data~\cite{drupalVulenrability, zendVulnerability, phpunitVulnerability, PHPGGC}. 
-In this thesis, we propose debloating techniques for web applications to identify the unneeded code and remove it, therefore, protecting web applications against the exploitation of vulnerabilities that reside in unused features. 
-We explore dynamic and hybrid (concolic execution) analysis techniques and evaluate their effectiveness in protecting against exploits. 
-To that end, we discuss various debloating metrics from source code reduction and software security perspectives to quantify the performance of various debloating techniques. 
+In this thesis, we propose debloating techniques for web applications to identify the unneeded code and remove it, thereby, protecting web applications against the exploitation of vulnerabilities that reside in unused features. 
+We explore dynamic and hybrid (i.e., based on concolic execution) debloating techniques and evaluate their effectiveness in protecting web applications. 
+To measure the performance of debloating schemes in reducing the attack surface of web applications, we discuss various metrics from source code reduction and software security perspectives. 
 
 
 
 \section{Contributions}
 
-In this thesis, we demonstrate the effectiveness of software debloating techniques on reducing the attack surface of web applications through source code and security metrics. 
+In this thesis, we demonstrate the effectiveness of software debloating techniques in reducing the attack surface of web applications through source code and security metrics. 
 Moreover, we design and develop systems to debloat popular web applications and quantify their effectiveness. The main contributions of this thesis are:
 
 \begin{itemize}
-    \item We conduct an analysis on four popular PHP applications and characterize the source of code bloat in them. After identifying the source of the bloat, we propose two debloating approaches, namely file and function level debloating and evaluate their effectiveness in removing severe security vulnerabilities and reducing the attack surface of target web applications in Chapter~\ref{chap:lim}.
-    \item We propose the role-based debloating approach. We conduct a user study with 60 experienced administrators and developers to understand how different users of the same web application interact with various features. Next, we demonstrate that the one-size-fits-all debloating provides access to unnecessary features for a substantial group of users. Then, we cluster users with similar usage behavior together and assign them to a role. Next, we provide a seamless content delivery scheme to transparently route users to their respective debloated web applications. We present the results of this work in Chapter~\ref{chap:dbltr}. 
-    \item We characterize one of the main challenge of debloating as the collection of usage traces over long periods of time. To that end, we propose the use of concolic execution and emulation to explore code paths of PHP applications based on the requests from the readily available web server logs. We present the design and challenges of this work in Chapter~\ref{chap:ad}.
+    \item We conduct an analysis on four popular PHP applications and characterize the source of code-bloat in them. After identifying the source of the bloat, we propose two dynamic debloating approaches, namely file and function level debloating and evaluate their effectiveness in removing severe security vulnerabilities and reducing the attack surface of target web applications in Chapter~\ref{chap:lim}.
+    \item We propose the role-based debloating approach. We conduct a user study with 60 experienced administrators and developers to understand how different users of the same web application interact with various features. We demonstrate that the one-size-fits-all debloating provides access to unnecessary features for a substantial group of users. Then, we cluster users with similar usage behavior together and assign them to a role. By providing a content delivery platform based on reverse-proxies, we transparently route users to their respective debloated web applications. We present the results of this work in Chapter~\ref{chap:dbltr}. 
+    \item We characterize one of the main challenges of dynamic debloating systems as the collection of usage traces over long periods of time and the under-representation of unsuccessful code paths (e.g., failed login attempts) in these traces. To that end, we propose the use of concolic execution to explore code paths of PHP applications based on the requests from the web server logs. We build a system named \animatedead{} and use it to perform a module reachability analysis based on web application entry points. Using this information, we debloat web applications and demonstrate that concolic execution can provide comparable security gains as dynamic debloating schemes while addressing their core limitations. We discuss the design of \animatedead{} and measure the security gains of debloating via concolic execution in Chapter~\ref{chap:ad}.
 \end{itemize}
